--- a/Cookbook.Recipes.Core.CustomValidation/Cookbook.Recipes.Core.CustomValidation.csproj
+++ b/Cookbook.Recipes.Core.CustomValidation/Cookbook.Recipes.Core.CustomValidation.csproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -38,10 +39,18 @@
     <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Repository\MockRepository.cs" />
     <Compile Include="UniqueUserValidator.cs" />
+    <Compile Include="MessageRepository\IMessageRepository.cs" />
+    <Compile Include="MessageRepository\XmlMessageRepository.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Folder Include="DataModel\" />
     <Folder Include="Repository\" />
+    <Folder Include="MessageRepository\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Messages.xml">
+      <LogicalName>CustomValidation.Messages.xml</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
