--- a/CookBook.Recipes.Core.DefectTracker/CookBook.Recipes.Core.DefectTracker.csproj
+++ b/CookBook.Recipes.Core.DefectTracker/CookBook.Recipes.Core.DefectTracker.csproj
@@ -34,9 +34,11 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Attributes\DefectTrackerAttribute.cs" />
+    <Compile Include="Processor\DeffectTrackerProcessor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Folder Include="Attributes\" />
+    <Folder Include="Processor\" />
   </ItemGroup>
 </Project>
